--- a/employee.html
+++ b/employee.html
@@ -36,13 +36,13 @@
         </a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active text-white " aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active text-white " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item" class="bg-white">
-                <a class="nav-link text-white active" href="employee.html">Employee</a>
+                <a style="color: #df5d06 !important;" class="nav-link text-white active" href="employee.html">Employee</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link text-white" href="index.html">Logout</a>
+                <a class="nav-link text-white" href="signin.html">Logout</a>
             </li>
         </ul>
 
